--- a/GpsApplication.csproj
+++ b/GpsApplication.csproj
@@ -58,6 +58,9 @@
 
 	<ItemGroup>
 	  <None Remove="Resources\Images\flag.png" />
+	  <None Remove="Resources\Images\layers.png" />
+	  <None Remove="Resources\Images\Location.png" />
+	  <None Remove="Resources\Images\route.png" />
 	</ItemGroup>
 
 	<ItemGroup>
