--- a/GpsApplication.csproj
+++ b/GpsApplication.csproj
@@ -59,6 +59,7 @@
 	<ItemGroup>
 	  <None Remove="Resources\Images\flag.png" />
 	  <None Remove="Resources\Images\layers.png" />
+	  <None Remove="Resources\Images\localizationdot.png" />
 	  <None Remove="Resources\Images\Location.png" />
 	  <None Remove="Resources\Images\route.png" />
 	</ItemGroup>
