--- a/.gitignore
+++ b/.gitignore
@@ -141,6 +141,8 @@ _TeamCity*
 # AxoCover is a Code Coverage Tool
 .axoCover/*
 !.axoCover/settings.json
+#appsettings
+appsettings.json
 
 # Coverlet is a free, cross platform Code Coverage Tool
 coverage*.json
