--- a/GpsApplication.csproj
+++ b/GpsApplication.csproj
@@ -66,12 +66,16 @@
 	  <None Remove="Resources\Images\Location.png" />
 	  <None Remove="Resources\Images\nowifi.png" />
 	  <None Remove="Resources\Images\playbutton.png" />
+	  <None Remove="Resources\Images\refresh.png" />
 	  <None Remove="Resources\Images\route.png" />
 	  <None Remove="Resources\Images\user.png" />
+	  <None Remove="Resources\Images\userlogged.png" />
 	  <None Remove="Resources\Images\wifi.png" />
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+		<PackageReference Include="Isopoh.Cryptography.Argon2" Version="2.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4">
@@ -84,9 +88,22 @@
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.7" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Maui.Controls.Maps" Version="8.0.60" />
+		<PackageReference Include="Microsoft.Maui.Essentials" Version="8.0.92" />
 		<PackageReference Include="MySql.Data" Version="8.3.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="UserManager.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="Platforms\Android\Assets\appsettings.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
