Rozpoczęcie pracy nad stroną z Quizami po dotarciu do danego miejsca

--- a/GpsApplication.csproj
+++ b/GpsApplication.csproj
@@ -95,6 +95,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="QuizPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="UserManager.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
