--- a/GpsApplication.csproj
+++ b/GpsApplication.csproj
@@ -39,10 +39,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
-
-		<!-- Splash Screen -->
+		<!-- App Icon -->		<!-- Splash Screen -->
 		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
 
 		<!-- Images -->
@@ -57,6 +54,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\AppIcon\appicon.png" />
 	  <None Remove="Resources\Images\bin.png" />
 	  <None Remove="Resources\Images\bookmarkoutline.png" />
 	  <None Remove="Resources\Images\cancel.png" />
@@ -72,6 +70,10 @@
 	  <None Remove="Resources\Images\user.png" />
 	  <None Remove="Resources\Images\userlogged.png" />
 	  <None Remove="Resources\Images\wifi.png" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiIcon Include="Resources\AppIcon\appicon.png" />
 	</ItemGroup>
 
 	<ItemGroup>
